# garageThermostat

./: .gitignore  CMakeLists.txt  Docker.test  Dockerfile  Dockerfile.test  OLED_SSD1306.h  OLED_SSD1306.ino  README.md  Require.txt  USART.h  adc.c  circularBuffer.h  circularBuffer.ino  circularStringBufferTests.c  commands.sh  commands1.sh  garageThermostat.h  garageThermostat.ino  garageThermostat.py  hcsr04.ino  i2c.ino  motionControl.h  motionControl.ino  pinDefines.h  temperature_SHT41.ino
.github/workflows/: avr_github_workflow.yml  cmake-multi-platform.yml
avr/: CMakeLists.txt  OLED_SSD1306.h  adc.h  hcsr04.h  motionControl.c  temperature_SHT41.c  temperature_SHT41.h
build-avr/: CMakeCache.txt  Makefile  cmake_install.cmake  garageThermostat.elf  garageThermostat.hex  garageThermostat.map
build-host/: CMakeCache.txt  Makefile  cmake_install.cmake
docs/: commands.txt  usb.txt
lib/: CMakeLists.txt  USART.ino  adc.h  circularBuffer.c  circularBuffer.h  display.h  i2c.h  motionControl.h  sht41.h  sht41.ino  uart.h
src/: OLED_SSD1306.c  adc.c  display.c  garageThermostat.c  hcsr04.c  i2c.c  uart.c
tests/: CMakeLists.txt  UnityConfig.cmake  test_main.c
